Update swagger. Wrap source validation in JSON field.
